// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DeleteWarning > when CATI mode is present > should display an error when the CATI active check fails 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_h_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Could not get warning details, please try again
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
      id="panel-_r_h_"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Error:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Could not get warning details, please try again
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning > when CATI mode is present > should display the CATI warning for an active CATI questionnaire 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="ons-u-mb-l"
      >
        Are you sure you want to delete the questionnaire
         
        <em
          class="highlight"
        >
          LMS2201_AA1
        </em>
        ?
      </h1>
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_6_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Questionnaire has active Telephone Operations survey days
        </div>
      </div>
      <div
        class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
        id="panel-_r_7_"
      >
        <span
          aria-hidden="true"
          class="ons-panel__icon"
        >
          !
        </span>
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Warning:
           
        </span>
        <div
          class="ons-panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <form>
        <br />
        <button
          class="ons-btn"
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Delete
            </span>
          </span>
        </button>
        <button
          class="ons-btn ons-btn--secondary"
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Cancel
            </span>
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="ons-u-mb-l"
    >
      Are you sure you want to delete the questionnaire
       
      <em
        class="highlight"
      >
        LMS2201_AA1
      </em>
      ?
    </h1>
    <div
      class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
      id="panel-_r_6_"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Error:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Questionnaire has active Telephone Operations survey days
      </div>
    </div>
    <div
      class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
      id="panel-_r_7_"
    >
      <span
        aria-hidden="true"
        class="ons-panel__icon"
      >
        !
      </span>
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Warning:
         
      </span>
      <div
        class="ons-panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <form>
      <br />
      <button
        class="ons-btn"
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Delete
          </span>
        </span>
      </button>
      <button
        class="ons-btn ons-btn--secondary"
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Cancel
          </span>
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning > when CAWI mode is include > should display CAWI warning for an active CAWI questionnaire 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="ons-u-mb-l"
      >
        Are you sure you want to delete the questionnaire
         
        <em
          class="highlight"
        />
        ?
      </h1>
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_0_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Questionnaire is active for web collection
        </div>
      </div>
      <div
        class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
        id="panel-_r_1_"
      >
        <span
          aria-hidden="true"
          class="ons-panel__icon"
        >
          !
        </span>
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Warning:
           
        </span>
        <div
          class="ons-panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <form>
        <br />
        <button
          class="ons-btn"
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Delete
            </span>
          </span>
        </button>
        <button
          class="ons-btn ons-btn--secondary"
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Cancel
            </span>
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="ons-u-mb-l"
    >
      Are you sure you want to delete the questionnaire
       
      <em
        class="highlight"
      />
      ?
    </h1>
    <div
      class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
      id="panel-_r_0_"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Error:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Questionnaire is active for web collection
      </div>
    </div>
    <div
      class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
      id="panel-_r_1_"
    >
      <span
        aria-hidden="true"
        class="ons-panel__icon"
      >
        !
      </span>
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Warning:
         
      </span>
      <div
        class="ons-panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <form>
      <br />
      <button
        class="ons-btn"
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Delete
          </span>
        </span>
      </button>
      <button
        class="ons-btn ons-btn--secondary"
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Cancel
          </span>
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`DeleteWarning > when Delete button is pressed > should display an error if deleting TO start date fails 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h1
        class="ons-u-mb-l"
      >
        Are you sure you want to delete the questionnaire
         
        <em
          class="highlight"
        >
          LMS2210_CC1
        </em>
        ?
      </h1>
      <div
        class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
        id="panel-_r_l_"
      >
        <span
          aria-hidden="true"
          class="ons-panel__icon"
        >
          !
        </span>
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Warning:
           
        </span>
        <div
          class="ons-panel__body "
        >
          The questionnaire and all associated respondent data will be deleted
        </div>
      </div>
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_m_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          Failed to delete TO start date
        </div>
      </div>
      <form>
        <br />
        <button
          class="ons-btn"
          data-testid="confirm-delete-button"
          id="confirm-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Delete
            </span>
          </span>
        </button>
        <button
          class="ons-btn ons-btn--secondary"
          data-testid="cancel-delete-button"
          id="cancel-delete"
          type="button"
        >
          <span
            class="ons-btn__inner"
          >
            <span
              class="ons-btn__text"
            >
              Cancel
            </span>
          </span>
        </button>
      </form>
    </div>
  </body>,
  "container": <div>
    <h1
      class="ons-u-mb-l"
    >
      Are you sure you want to delete the questionnaire
       
      <em
        class="highlight"
      >
        LMS2210_CC1
      </em>
      ?
    </h1>
    <div
      class="ons-panel ons-panel--warn ons-panel--no-title ons-u-mt-m"
      id="panel-_r_l_"
    >
      <span
        aria-hidden="true"
        class="ons-panel__icon"
      >
        !
      </span>
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Warning:
         
      </span>
      <div
        class="ons-panel__body "
      >
        The questionnaire and all associated respondent data will be deleted
      </div>
    </div>
    <div
      class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
      id="panel-_r_m_"
    >
      <span
        class="ons-panel__assistive-text ons-u-vh"
      >
        Error:
         
      </span>
      <div
        class="ons-panel__body "
      >
        Failed to delete TO start date
      </div>
    </div>
    <form>
      <br />
      <button
        class="ons-btn"
        data-testid="confirm-delete-button"
        id="confirm-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Delete
          </span>
        </span>
      </button>
      <button
        class="ons-btn ons-btn--secondary"
        data-testid="cancel-delete-button"
        id="cancel-delete"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          <span
            class="ons-btn__text"
          >
            Cancel
          </span>
        </span>
      </button>
    </form>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
